Fixed spacing issue with messages

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   margin: auto;
   display: flex;
   flex-direction: column;
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   font-weight: 600;
   color: white;
 }
@@ -13,27 +13,50 @@ button {
   height: 10vh;
 }
 
+/* .score-container {
+  width: 90%;
+  margin: auto;
+} */
+
 .spacing {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 h1 {
   text-align: center;
   margin-top: 10px;
   margin-bottom: 0px;
-  font-size: 2rem;
+  font-size: 1.2rem;
+  text-transform: capitalize;
 }
 
 h2 {
   text-align: center;
-  margin: 10px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+.spacing h2 {
+  margin-top: 10px;
+}
+
+.dont-move {
+  text-align: center;
+  width: 100px;
+  font-size: 1.3rem;
 }
 
 @media (min-width: 650px) {
   .App {
     width: 650px;
   }
+}
+
+.checkout-section {
+  background-color: #18df14;
+  display: flex;
+  justify-content: space-around;
 }
 
 .sides {
@@ -46,10 +69,10 @@ h2 {
   justify-content: space-around;
 }
 
-.legs span {
+/* .legs span {
   padding-left: 20px;
   padding-right: 20px;
-}
+} */
 
 .player-row {
   display: flex;
@@ -68,7 +91,18 @@ h2 {
 
 #throw-section {
   height: 40px;
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
+}
+
+#throw-section span {
+  text-align: center;
+  /* height: 40px; */
+  /* margin-bottom: 20px; */
+}
+
+.message-section {
+  height: 40px;
+  /* margin-bottom: 20px; */
 }
 
 #doubles-row {
